--- a/admin/admin.html
+++ b/admin/admin.html
@@ -164,7 +164,7 @@
                             </tr>
                             <tr>
                               <td>4</td>
-                              <td><a href="#"><img src="/img/ava4.png" class="avatar" alt="Avatar" > Nguyễn Văn Nam</a></td>
+                              <td><a href="#"><img src="/img/ava5.png" class="avatar" alt="Avatar" > Nguyễn Văn Nam</a></td>
                               <td>01/12/2023</td>                        
                               <td>Khách hàng</td>
                               <td><span class="status text-success">&bull;</span> Đang hoạt động</td>
@@ -175,7 +175,7 @@
                           </tr>
                           <tr>
                             <td>5</td>
-                            <td><a href="#"><img src="/img/ava4.png" class="avatar" alt="Avatar" > Huỳnh Văn Khang</a></td>
+                            <td><a href="#"><img src="/img/ava6.png" class="avatar" alt="Avatar" > Đỗ Văn Khang</a></td>
                             <td>02/10/2023</td>                        
                             <td>Khách hàng</td>
                             <td><span class="status text-success">&bull;</span> Đang hoạt động</td>
