--- a/product1.html
+++ b/product1.html
@@ -372,7 +372,7 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Bỏ vào giỏ hàng</button>
 							</div>
 							<ul class="product-btns">
 								<li><a href="#"><i class="fa fa-heart-o"></i> Yêu thích</a></li>
