--- a/product2.html
+++ b/product2.html
@@ -371,7 +371,7 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Bỏ vào giỏ hàng</button>
 							</div>
 
 							<ul class="product-btns">
