--- a/productsamsung.html
+++ b/productsamsung.html
@@ -162,17 +162,11 @@
 
 								<!-- Cart -->
                                 <div class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+									<a class="dropdown-toggle"  aria-expanded="true" href="cartnotuser.html">
 										<i class="fa fa-shopping-cart"></i>
 											<div>Giỏ hàng</div>
 											<span class="qty">0</span>
 									</a>
-									<div class="cart-dropdown">
-										<div class="cart-btns">
-											<a href="cartnotuser.html">Xem giỏ hàng</a>
-											<a href="checkout.html">Thanh toán <i class="fa fa-arrow-circle-right"></i></a>
-										</div>
-									</div>
 								</div>
 								<!-- /Cart -->
 
