--- a/samsung.html
+++ b/samsung.html
@@ -438,7 +438,7 @@
 									<div class="product-body">
 										<p class="product-category">Samsung</p>
 										<h3 class="product-name"><a href="productsamsung.html">samsung Galaxy S21</a></h3>
-										<h4 class="product-price">10.590.000₫ <del class="product-old-price">15.590.000₫</del></h4>
+										<h4 class="product-price">10.590.000₫</h4>
 										<div class="product-rating">
 											
 										</div>
@@ -467,7 +467,7 @@
 									<div class="product-body">
 										<p class="product-category">Samsung </p>
 										<h3 class="product-name"><a href="productsamsung.html">Samsung Galaxy Z Flip 4</a></h3>
-										<h4 class="product-price">12.890.000₫ <del class="product-old-price">13.090.000₫</del></h4>
+										<h4 class="product-price">12.890.000₫ </h4>
 										<div class="product-rating">
 											
 										</div>
