--- a/product.html
+++ b/product.html
@@ -297,14 +297,14 @@
 								<h3 class="product-price">23.990.000₫ <del class="product-old-price">24.990.000₫</del></h3>
 								<span class="product-available">Còn hàng</span>
 							</div>
-							<p>iPhone 13 Pro Max 256GB được đánh giá là một trong những dòng iPhone có khả năng chụp ảnh siêu ấn tượng cùng với camera góc siêu rộng mang đến khả năng chụp ảnh thiếu sáng một cách đặc biệt. Không những thế, mà dòng iPhone này còn được đánh giá là có dung lượng bộ nhớ tốt, đáp ứng được đầy đủ các công việc hằng ngày.</p>
+							<p>iPhone 13 Pro Max được đánh giá là một trong những dòng iPhone có khả năng chụp ảnh siêu ấn tượng cùng với camera góc siêu rộng mang đến khả năng chụp ảnh thiếu sáng một cách đặc biệt. Không những thế, mà dòng iPhone này còn được đánh giá là có dung lượng bộ nhớ tốt, đáp ứng được đầy đủ các công việc hằng ngày.</p>
 
 							<div class="product-options">
 								<label>
 									RAM
 									<select class="input-select">
-										<option value="0">128GB</option>
 										<option value="1">256GB</option>
+										<option value="0">128GB</option>
 										<option value="2">512GB</option>
 										<option value="3">1TB</option>
 									</select>
@@ -366,7 +366,7 @@
 								<div id="tab1" class="tab-pane fade in active">
 									<div class="row">
 										<div class="col-md-12">
-											<p>iPhone 13 Pro Max 512GB, cáp USB-C sang Lightning </p>
+											<p>iPhone 13 Pro Max, cáp USB-C sang Lightning </p>
 											<p>1 ĐỔI 1 trong 30 ngày nếu có lỗi phần cứng nhà sản xuất.</p>
 											<p> Bảo hành 12 tháng tại trung tâm bảo hành chính hãng Apple.</p>
 											<p>Giá đã bao gồm thuế VAT</p>
@@ -380,11 +380,11 @@
 									<div class="row">
 										<div class="col-md-12">
 											<p>Kích thước màn hình :6.7 inches </p>
-											<p>Công nghệ màn hình : Super Retina XDR OLED</p>
-											<p>Độ phân giải màn hình : 2778 x 1284 pixel</p>
-											<p>Tính năng màn hình : 120Hz, Super Retina XDR với ProMotion 6.1 inch, OLED, 458 pp, HDR display, True Tone, Wide color (P3), Haptic Touch</p>
-											<p>Tần số quét : 120Hz</p>
-											<p>Kiểu màn hình : Tai thỏ</p>
+											<p>Trọng lượng sản phẩm: 221 g</p>
+											<p>RAM: 8 GB</p>
+											<p>Bộ nhớ trong: 256 GB</p>
+											<p>Độ phân giải: 2796 x 1290 Pixels</p>
+											<p>Dung lượng Pin: 4.440 mAh</p>
 										</div>
 									</div>
 								</div>
