--- a/admin/thongke.html
+++ b/admin/thongke.html
@@ -29,6 +29,7 @@
                 <a href="admin.html"><li><i class="fa fa-users"></i>Người dùng</li></a>
                 <a href="category.html"><li > <i class="fa fa-product-hunt"></i> Sản phẩm</li></a>
                 <a href="order.html"><li><i class="fa fa-truck"></i>Đơn hàng</li></a>
+                <a href="customer.html"><li ><i class="fa fa-users"></i>Khách hàng</li></a>
                 <a href="thongke.html"><li class="nav-active"><i class="fa fa-pencil-square-o"></i>Thống kê </li></a>
               
               </div>
