--- a/product.html
+++ b/product.html
@@ -379,8 +379,8 @@
 								<div id="tab2" class="tab-pane fade in">
 									<div class="row">
 										<div class="col-md-12">
-											<p>Kích thước màn hình :6.7 inches </p>
-											<p>Trọng lượng sản phẩm: 221 g</p>
+											<!-- <p>Kích thước màn hình :6.7 inches </p>
+											<p>Trọng lượng sản phẩm: 221 g</p> -->
 											<p>RAM: 8 GB</p>
 											<p>Bộ nhớ trong: 256 GB</p>
 											<p>Độ phân giải: 2796 x 1290 Pixels</p>
