--- a/productsamsung.html
+++ b/productsamsung.html
@@ -374,12 +374,10 @@
 								<div id="tab2" class="tab-pane fade in">
 									<div class="row">
 										<div class="col-md-12">
-											<p>Màn hình: Dynamic AMOLED 2X6.8"Quad HD+ (2K+)</p>
-											<p>Hệ điều hành: Android 13</p>
-											<p>Camera sau: Chính 200 MP & Phụ 12 MP, 10 MP, 10 MP</p>
-											<p>Camera trước: 12 MP</p>
-											<p>Chip: Snapdragon 8 Gen 2 for Galaxy</p>
 											<p>RAM: 8 GB</p>
+											<p>Bộ nhớ trong: 256 GB</p>
+											<p>Độ phân giải: 3088 x 1440 Pixels</p>
+											<p>Dung lượng PIN: 5000 mAh</p>
 										</div>
 									</div>
 								</div>
