--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 								<input class="input" type="email" placeholder="Nhập Email của bạn">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Đăng kí</button>
 							</form>
-							<ul class="newsletter-follow">
+							<!-- <ul class="newsletter-follow">
 								<li>
 									<a href="#"><i class="fa fa-facebook"></i></a>
 								</li>
@@ -613,7 +613,7 @@
 								<li>
 									<a href="#"><i class="fa fa-pinterest"></i></a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
@@ -649,8 +649,8 @@
 								<h3 class="footer-title">Sản phẩm</h3>
 								<ul class="footer-links">
 									<li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-									<li><a href="samsung.html">Samsung</a></li>
-									<li><a href="iphone.html">iPhone</a></li>
+									<li><a href="#">Samsung</a></li>
+									<li><a href="#">iPhone</a></li>
 									<li><a href="#hot-deal">Ưu đãi</a></li>
 								</ul>
 							</div>
@@ -690,7 +690,7 @@
 			<div id="bottom-footer" class="section">
 				<div class="container">
 					<!-- row -->
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 text-center">
 							<ul class="footer-payments">
 								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
@@ -701,7 +701,7 @@
 								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 						<!-- /row -->
 				</div>
 				<!-- /container -->
