--- a/napas.html
+++ b/napas.html
@@ -314,8 +314,8 @@
 								<h3 class="footer-title">Sản phẩm</h3>
 								<ul class="footer-links">
 									<li><a href="#">Sản phẩm bán chạy</a></li>
-									<li><a href="samsung1.html">Samsung</a></li>
-									<li><a href="iphone1.html">iPhone</a></li>
+									<li><a href="#">Samsung</a></li>
+									<li><a href="#">iPhone</a></li>
 									<li><a href="#">Ưu đãi</a></li>
 								</ul>
 							</div>
@@ -357,14 +357,14 @@
 					<!-- row -->
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<ul class="footer-payments">
+							<!-- <ul class="footer-payments">
 								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
 								<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 						<!-- /row -->
