--- a/product1.html
+++ b/product1.html
@@ -248,8 +248,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="breadcrumb-tree">
-							<li><a href="user.html">Trang chủ</a></li>
-							<li><a href="store1.html">Phân loại</a></li>
+							<!-- <li><a href="user.html">Trang chủ</a></li> -->
+							<li><a href="store1.html">Sản phẩm</a></li>
 							<li><a href="iphone1.html">iPhone</a></li>
 							<!-- <li><a href="#"></a>Phụ kiện</li> -->
 							<li class="active">iPhone 13 Pro Max</li>
@@ -562,7 +562,7 @@
 								<input class="input" type="email" placeholder="Nhập Email của bạn">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Đăng kí</button>
 							</form>
-							<ul class="newsletter-follow">
+							<!-- <ul class="newsletter-follow">
 								<li>
 									<a href="#"><i class="fa fa-facebook"></i></a>
 								</li>
@@ -575,7 +575,7 @@
 								<li>
 									<a href="#"><i class="fa fa-pinterest"></i></a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
@@ -611,8 +611,8 @@
 								<h3 class="footer-title">Sản phẩm</h3>
 								<ul class="footer-links">
 									<li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-									<li><a href="samsung1.html">Samsung</a></li>
-									<li><a href="iphone1.html">iPhone</a></li>
+									<li><a href="#">Samsung</a></li>
+									<li><a href="#">iPhone</a></li>
 									<li><a href="#hot-deal">Ưu đãi</a></li>
 								</ul>
 							</div>
@@ -654,14 +654,14 @@
 					<!-- row -->
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<ul class="footer-payments">
+							<!-- <ul class="footer-payments">
 								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
 								<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 						<!-- /row -->
