--- a/profile.html
+++ b/profile.html
@@ -176,44 +176,11 @@
 
                         <!-- Cart -->
                         <div class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                            <a class="dropdown-toggle" aria-expanded="true" href="cart.html">
                                 <i class="fa fa-shopping-cart"></i>
-                                <span>Giỏ hàng</span>
-                                <div class="qty">4</div>
+                                <div>Giỏ hàng</div>
+                                <span class="qty">0</span>
                             </a>
-                            <div class="cart-dropdown">
-                                <div class="cart-list">
-                                    <div class="product-widget">
-                                        <div class="product-img">
-                                            <img src="./img/product01.png" alt="">
-                                        </div>
-                                        <div class="product-body">
-                                            <h3 class="product-name"><a href="#">iPhone 14 Pro Max 256GB</a></h3>
-                                            <h4 class="product-price"><span class="qty">1x</span>27.090.000₫</h4>
-                                        </div>
-                                        <button class="delete"><i class="fa fa-close"></i></button>
-                                    </div>
-
-                                    <div class="product-widget">
-                                        <div class="product-img">
-                                            <img src="./img/product02.png" alt="">
-                                        </div>
-                                        <div class="product-body">
-                                            <h3 class="product-name"><a href="#">iPhone 13 Pro Max 512GB</a></h3>
-                                            <h4 class="product-price"><span class="qty">3x</span>23.990.000₫</h4>
-                                        </div>
-                                        <button class="delete"><i class="fa fa-close"></i></button>
-                                    </div>
-                                </div>
-                                <div class="cart-summary">
-                                    <small>4 sản phẩm được chọn</small>
-                                    <h5>TỔNG: 99.060.000₫</h5>
-                                </div>
-                                <div class="cart-btns">
-                                    <a href="cart.html">Xem giỏ hàng</a>
-                                    <a href="checkout.html">Thanh toán <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
                         </div>
                         <!-- /Cart -->
 
@@ -271,12 +238,13 @@
               <input type="text" class="form-control" value="User1234">
             </div>
             <div class="form-group">
+                <label class="control-label">Địa chỉ</label>
+                <input type="text" class="form-control" value="48/24 Âu Cơ, Phú Trung, Quận Tân Phú, TP.HCM">
+              </div>
+            <div class="form-group">
               <label class="control-label">Email</label>
               <input type="text" class="form-control" value="user@mail.com">
-              <div class="alert alert-warning mt-3">
-                Email chưa được xác nhận. Vui lòng kiểm tra hộp thư đến.<br>
-                Gửi lại xác nhận
-              </div>
+              
             </div>
             
 
@@ -317,8 +285,8 @@
                         <h3 class="footer-title">Sản phẩm</h3>
                         <ul class="footer-links">
                             <li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-                            <li><a href="samsung1.html">Samsung</a></li>
-                            <li><a href="iphone1.html">iPhone</a></li>
+                            <li><a href="#">Samsung</a></li>
+                            <li><a href="#">iPhone</a></li>
                             <li><a href="#hot-deal">Ưu đãi</a></li>
                         </ul>
                     </div>
@@ -360,14 +328,14 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <ul class="footer-payments">
+                    <!-- <ul class="footer-payments">
                         <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
                         <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
                         <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
                         <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
                         <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
                         <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
                 <!-- /row -->
