--- a/visa.html
+++ b/visa.html
@@ -317,8 +317,8 @@
 							<h3 class="footer-title">Sản phẩm</h3>
 							<ul class="footer-links">
 								<li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-								<li><a href="samsung1.html">Samsung</a></li>
-								<li><a href="iphone1.html">iPhone</a></li>
+								<li><a href="#">Samsung</a></li>
+								<li><a href="#">iPhone</a></li>
 								<li><a href="#hot-deal">Ưu đãi</a></li>
 							</ul>
 						</div>
@@ -358,7 +358,7 @@
 		<div id="bottom-footer" class="section">
 			<div class="container">
 				<!-- row -->
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-12 text-center">
 						<ul class="footer-payments">
 							<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
@@ -369,7 +369,7 @@
 							<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 					<!-- /row -->
 			</div>
 			<!-- /container -->
