--- a/admin/loginadmin.html
+++ b/admin/loginadmin.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/form.css">   
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/form.css">   
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
 
 </head>
 <body>
     
-  <a href="index.html">
-    <div class="backclick"><i class="fa fa-arrow-left" aria-hidden="true"></i>
-    </div>
-  </a>
+ 
  
   
   <section id="login-form" class="login-form">
@@ -28,7 +25,7 @@
             <div class="form-container">
 
               <div class="form-header text-center">
-                <a href="index.html"><img class="logo" src="img/logo.png" alt=""></a>
+                <a href="/index.html"><img class="logo" src="/img/logo.png" alt=""></a>
                 <h2 class="title">Đăng nhập</h2>
               </div>
               <div class="form-body">
@@ -99,8 +96,8 @@
 
   </section>
 
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 </html>
