--- a/cart.html
+++ b/cart.html
@@ -192,19 +192,19 @@
 
 								<!-- Cart -->
 								<div class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="#">
 										<i class="fa fa-shopping-cart"></i>
 										<div>Giỏ hàng</div>
 										<span class="qty">0</span>
 									</a>
-									<div class="cart-dropdown">
+									<!-- <div class="cart-dropdown">
 										<div class="cart-list">
 										</div>
 										<div class="cart-btns">
 											<a href="cart.html">Xem giỏ hàng</a>
 											<a href="checkout1.html">Thanh toán  <i class="fa fa-arrow-circle-right"></i></a>
 										</div>
-									</div>
+									</div> -->
 								</div>
 								<!-- /Cart -->
 
@@ -285,7 +285,7 @@
 				
         </div>
 		<div class="btn-check pull-right">
-			<a href="checkout1.html"><button type="button" class="btn btn-primary" >Thanh toán</button></a> 
+			<a href="checkout1.html"><button type="button" class="btn btn-primary" >Đến trang thanh toán</button></a> 
 		</div>
         <!-- /MAICART -->
 		<!-- SECTION -->
@@ -314,7 +314,7 @@
 								<input class="input" type="email" placeholder="Nhập Email của bạn">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Đăng kí</button>
 							</form>
-							<ul class="newsletter-follow">
+							<!-- <ul class="newsletter-follow">
 								<li>
 									<a href="#"><i class="fa fa-facebook"></i></a>
 								</li>
@@ -327,7 +327,7 @@
 								<li>
 									<a href="#"><i class="fa fa-pinterest"></i></a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
@@ -363,8 +363,8 @@
 								<h3 class="footer-title">Sản phẩm</h3>
 								<ul class="footer-links">
 									<li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-									<li><a href="samsung1.html">Samsung</a></li>
-									<li><a href="iphone1.html">iPhone</a></li>
+									<li><a href="#">Samsung</a></li>
+									<li><a href="#">iPhone</a></li>
 									<li><a href="#hot-deal">Ưu đãi</a></li>
 								</ul>
 							</div>
@@ -406,14 +406,14 @@
 					<!-- row -->
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<ul class="footer-payments">
+							<!-- <ul class="footer-payments">
 								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
 								<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 						<!-- /row -->
