--- a/storepage3.html
+++ b/storepage3.html
@@ -629,7 +629,7 @@
 								<input class="input" type="email" placeholder="Nhập Email của bạn">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Đăng kí</button>
 							</form>
-							<ul class="newsletter-follow">
+							<!-- <ul class="newsletter-follow">
 								<li>
 									<a href="#"><i class="fa fa-facebook"></i></a>
 								</li>
@@ -642,7 +642,7 @@
 								<li>
 									<a href="#"><i class="fa fa-pinterest"></i></a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 				</div>
@@ -678,8 +678,8 @@
 								<h3 class="footer-title">Sản phẩm</h3>
 								<ul class="footer-links">
 									<li><a href="#quick-sale">Sản phẩm bán chạy</a></li>
-									<li><a href="samsung.html">Samsung</a></li>
-									<li><a href="iphone.html">iPhone</a></li>
+									<li><a href="#">Samsung</a></li>
+									<li><a href="#">iPhone</a></li>
 									<li><a href="#hot-deal">Ưu đãi</a></li>
 								</ul>
 							</div>
@@ -721,14 +721,14 @@
 					<!-- row -->
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<ul class="footer-payments">
+							<!-- <ul class="footer-payments">
 								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
 								<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
 								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</div>
 						<!-- /row -->
