--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-  
-  <a href="index.html">
-    <div class="backclick"><i class="fa fa-arrow-left" aria-hidden="true"></i>
-    </div>
-  </a>
+ 
+    <div class="backclick"></div>
+
  
 
   <section id="login-form" class="login-form">
