--- a/cartnotuser.html
+++ b/cartnotuser.html
@@ -162,7 +162,7 @@
 									<a class="dropdown-toggle" aria-expanded="true" href="cartnotuser.html">
 										<i class="fa fa-shopping-cart"></i>
 											<div>Giỏ hàng</div>
-											<span class="qty">0</span>
+										
 									</a>
 								</div>
 								<!-- /Cart -->
@@ -196,7 +196,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="index.html">Trang chủ</a></li>
-						<li><a href="contact.html">Liên hệ</a></li>
+						<li><a href="#">Liên hệ</a></li>
 						<li><a href="store.html">Sản phẩm</a></li>
 					</ul>
 					<!-- /NAV -->
