--- a/checkout.html
+++ b/checkout.html
@@ -197,7 +197,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="index.html">Trang chủ</a></li>
-						<li><a href="contact.html">Liên hệ</a></li>
+						<li><a href="#">Liên hệ</a></li>
 						<li><a href="store.html">Sản phẩm</a></li>
 					</ul>
 					<!-- /NAV -->
