--- a/history.html
+++ b/history.html
@@ -227,7 +227,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="user.html">Trang chủ</a></li>
-						<li><a href="contact1.html">Liên hệ</a></li>
+						<li><a href="#">Liên hệ</a></li>
 						<li><a href="store1.html">Sản phẩm</a></li>
 					</ul>
 					<!-- /NAV -->
