--- a/product.html
+++ b/product.html
@@ -198,7 +198,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li ><a href="index.html">Trang chủ</a></li>
-						<li><a href="contact.html">Liên hệ</a></li>
+						<li><a href="#">Liên hệ</a></li>
 						<li  class="active"><a href="store.html">Sản phẩm</a></li>
 					</ul>
 					<!-- /NAV -->
