--- a/user.html
+++ b/user.html
@@ -228,7 +228,7 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Trang chủ</a></li>
-						<li><a href="contact1.html">Liên hệ</a></li>
+						<li><a href="#">Liên hệ</a></li>
 						<li><a href="store1.html">Sản phẩm</a></li>
 					</ul>
 					<!-- /NAV -->
